--- a/Project 2/style.css
+++ b/Project 2/style.css
@@ -2,7 +2,14 @@
 body {
 	background-color: #111;
 }
+@font-face {
+   font-family: Whitelies;
+   src: url(WhiteLies-q9m0.otf);
+}
 
+* {
+   font-family: Whitelies;
+}
 .title {
 	font-family: Whitelies;
 	text-align: center;
