--- a/Project 2/style.css
+++ b/Project 2/style.css
@@ -11,7 +11,7 @@ body {
    font-family: Whitelies;
 }
 .title {
-	font-family: Whitelies;
+	font-family: Arial;
 	text-align: center;
 	color: #FFF;
 	display: flex;
