--- a/Project 2/style.css
+++ b/Project 2/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat');
+/* @import url('https://fonts.googleapis.com/css?family=Montserrat'); */
 body {
 	background-color: #111;
 }
