lots of changes
hopefully this works

--- a/css/style.css
+++ b/css/style.css
@@ -3,14 +3,14 @@ body {
 }
 
 h1 {
-  font-family: Henny Penny;
+  font-family: arial;
   text-align: center;
   font-size:  40pt;
   color: red;
 }
 
 h2 {
-  font-family: Dreamwood Demo;
+  font-family: arial;
   text-align: center;
   font-size: 30;
   color: red;
