--- a/style.css
+++ b/style.css
@@ -1,8 +1,46 @@
 html {
-  background-color: green;
+  background-color: #6097f0;
+  font-family: helvetica;
+
 }
+
+
 
 h1 {
   color: white;
-  background-color: black;
+  font-family: helvetica;
+  text-align: center;
+}
+
+h2 {
+  color: white;
+  font-family: helvetica;
+  text-align: center;
+}
+
+h3 {
+  color: #f0edc2;
+}
+
+a:link {
+    text-decoration: none;
+    color: black;
+}
+
+a:visited {
+    text-decoration: none;
+    color: black;
+}
+
+a:hover {
+    text-decoration: none;
+    color: #c7c4b5;
+}
+
+a:active {
+    text-decoration: none;
+}
+
+a {
+    color: black;
 }
