--- a/Project2/css/styles.css
+++ b/Project2/css/styles.css
@@ -33,6 +33,8 @@ audio {
 @media screen and (max-width: 480px) {
   div {
     line-height: 200%;
+    overflow-x: hidden;
+    overflow-y: auto;
   }
 }
 
