--- a/Project2/css/styles.css
+++ b/Project2/css/styles.css
@@ -39,6 +39,8 @@ audio {
     line-height: 200%;
     overflow-x: hidden;
     overflow-y: auto;
+    background: linear-gradient(-45deg,#122754,#9fabc4,#041029,#01091a,black);
+    background-size: 400% 400%;
   }
 }
 
