--- a/recipe/css/recipe-styles.css
+++ b/recipe/css/recipe-styles.css
@@ -1,5 +1,5 @@
 body {
-  background-color: blue;
+  background-image: url("../images/macncheese.jpg");
 }
 
 h1 {
@@ -27,5 +27,6 @@ ol {
 .recipe {
   margin: 40px auto;
   max-width: 1000px;
-  color: pink;
+  color: #2c5861;
+  background-color: white;
 }
