--- a/css/style.css
+++ b/css/style.css
@@ -1,40 +1,46 @@
-body {
- background-color: #082911;
+html {
+  background-color: #6097f0;
+  font-family: helvetica;
+
 }
 
+
+
 h1 {
-  font-family: arial;
+  color: white;
+  font-family: helvetica;
   text-align: center;
-  font-size:  40pt;
-  color: red;
 }
 
 h2 {
-  font-family: arial;
-  text-align: center;
-  font-size: 30;
-  color: red;
-}
-
-
-p {
+  color: white;
   font-family: helvetica;
   text-align: center;
-  font-size: 20;
-  color: #c41010;
-}
-img {
-  max-width: 250px;
-  max-height: 250px;
-  margin-right: 70px;
-  margin-left: 70px;
-
-
 }
 
+h3 {
+  color: #f0edc2;
+}
 
+a:link {
+    text-decoration: none;
+    color: black;
+}
 
+a:visited {
+    text-decoration: none;
+    color: black;
+}
 
+a:hover {
+    text-decoration: none;
+    color: #c7c4b5;
+}
 
+a:active {
+    text-decoration: none;
+}
 
-Apple Chancery, cursive
+a {
+    color: black;
+}
