--- a/project3/css/prayer.css
+++ b/project3/css/prayer.css
@@ -14,15 +14,18 @@ img {
 #myBtn {
   background:  linear-gradient(180deg, #DEE8F9 0%, #7193C7 100%); /* Green */
   border: none;
-  z-index: ;
+  z-index: 3;
   color: white;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
   font-size: 16px;
   display: block;
-  margin-left: auto;
-  margin-right: auto
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+
 
 }
 
@@ -73,7 +76,7 @@ img {
 position: absolute;
 width: 324px;
 height: 51px;
-left: 485px;
+left: 570px;
 top: 75px;
 
 font-family: Helvetica Neue;
@@ -129,7 +132,7 @@ color: #000000;
 position: absolute;
 width: 432px;
 height: 422px;
-left: 185px;
+left: 220px;
 top: 300px;
 
 font-family: Helvetica Neue;
@@ -145,7 +148,7 @@ color: #000000;
 position: absolute;
 width: 446px;
 height: 408px;
-left: 669px;
+left: 704px;
 top: 300px;
 
 font-family: Helvetica Neue;
