--- a/project3/css/prayer.css
+++ b/project3/css/prayer.css
@@ -14,17 +14,17 @@ img {
 #myBtn {
   background:  linear-gradient(180deg, #DEE8F9 0%, #7193C7 100%); /* Green */
   border: none;
-  z-index: 3;
+  z-index: 2;
   color: white;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
   font-size: 16px;
-  display: block;
+  position: absolute;
   top: 50%;
-  left: 50%;
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+  right: 0;
+  left: 0;
+  margin: 0 auto;
 
 
 }
@@ -35,7 +35,7 @@ img {
 .modal {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  z-index: 3; /* Sit on top */
   left: 0;
   top: 0;
   width: 100%; /* Full width */
